kubernetes/apps/mario/registry/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: registry-ui
  name: registry-ui
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      run: registry-ui
  template:
    metadata:
      labels:
        run: registry-ui
    spec:
      containers:
      - name: registry-ui
        image: quiq/registry-ui
        ports:
          - name: http
            containerPort: 8000
            protocol: TCP
        volumeMounts:
        - mountPath: "/opt"
          name: "config"
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
      volumes:
      - name: config
        configMap:
          defaultMode: 420
          name: docker-registry-ui
