kubernetes/apps/mario/registry/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: internal
  rules:
  - host: "registry-ui.vegmond.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry-ui
            port:
              number: 80
